--- a/vm/compiler/Cargo.toml
+++ b/vm/compiler/Cargo.toml
@@ -11,8 +11,9 @@ anyhow = "1.0.41"
 once_cell = "1.8.0"
 tempfile = "3.1.0"
 regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }
-move-lang = { package="move-lang", git = "https://github.com/starcoinorg/diem", rev="9cf472607f028c90c3deab12bf4757466039fcba" }
-move-lang-test-utils = { package="move-lang-test-utils", git = "https://github.com/starcoinorg/diem", rev="9cf472607f028c90c3deab12bf4757466039fcba" }
+move-lang = { package="move-lang", git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
+move-command-line-common = {git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"}
+move-lang-test-utils = { package="move-lang-test-utils", git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
 walkdir = "2.3"
 rayon = "1.5.1"
 itertools = "0.10.1"
