--- a/vm/move-coverage/Cargo.toml
+++ b/vm/move-coverage/Cargo.toml
@@ -15,12 +15,11 @@ serde = { version = "1.0.129", default-features = false }
 anyhow = "1.0.41"
 codespan = { version = "0.8.0", features = ["serialization"] }
 colored = "2.0.0"
-bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }
-starcoin-types = { path = "../../types"}
-starcoin-vm-types = { path = "../types"}
-bytecode-source-map = { package = "bytecode-source-map", version = "0.1.0", git = "https://github.com/starcoinorg/diem", rev="9cf472607f028c90c3deab12bf4757466039fcba" }
-bytecode-verifier = { package = "bytecode-verifier", version = "0.1.0", git = "https://github.com/starcoinorg/diem", rev="9cf472607f028c90c3deab12bf4757466039fcba" }
+bcs = "0.1.2"
 
+bytecode-source-map = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
+move-coverage = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
+move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
 [features]
 default = []
 
