--- a/vm/vm-runtime/Cargo.toml
+++ b/vm/vm-runtime/Cargo.toml
@@ -11,7 +11,8 @@ anyhow = "1.0.41"
 once_cell = "1.8.0"
 prometheus = "0.12.0"
 starcoin-types = { path = "../../types"}
-move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="9cf472607f028c90c3deab12bf4757466039fcba" }
+move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
+move-stdlib = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
 starcoin-config = { path = "../../config"}
 starcoin-logger = {path = "../../commons/logger"}
 num_enum = "0.5.4"
@@ -22,10 +23,11 @@ bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }
 stdlib = { package="stdlib", path = "../stdlib"}
 starcoin-vm-types = { path = "../types"}
 starcoin-move-compiler = { path = "../compiler"}
-
+starcoin-natives = {path = "../natives"}
 
 [dev-dependencies]
 
 [features]
 default = []
-debug_module = ["move-vm-runtime/debug_module"]
+testing = ["move-stdlib/testing"]
+
