--- a/vm/functional-tests/Cargo.toml
+++ b/vm/functional-tests/Cargo.toml
@@ -19,7 +19,7 @@ termcolor = "1.1.2"
 mirai-annotations = "1.10.1"
 starcoin-types = { path = "../../types"}
 starcoin-vm-types = { path = "../types" ,default-features = false, features = ["fuzzing"]}
-starcoin-vm-runtime = { path = "../vm-runtime", features = ["debug_module"] }
+starcoin-vm-runtime = { path = "../vm-runtime", features = ["testing"] }
 starcoin-config = { path = "../../config" }
 starcoin-crypto = { path = "../../commons/crypto", features = ["fuzzing"]}
 starcoin-logger = { path = "../../commons/logger"}
@@ -30,7 +30,7 @@ executor = { package="starcoin-executor", path = "../../executor"}
 starcoin-genesis = { path = "../../genesis" }
 starcoin-consensus = { path = "../../consensus" }
 starcoin-account-api = { path = "../../account/api" }
-move-lang = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26"  }
+move-lang = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8"  }
 
 [dev-dependencies]
 starcoin-vm-types = { path = "../types"}
