--- a/vm/natives/Cargo.toml
+++ b/vm/natives/Cargo.toml
@@ -7,15 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-errmapgen = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-docgen = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-command-line-common = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-prover = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-vm-types = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-move-core-types = { git = "https://github.com/starcoinorg/diem", rev="26d5d426166f1c402cd0f275dcdbba3993596b26" }
-
+errmapgen = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+docgen = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-command-line-common = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-prover = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-vm-types = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-vm-runtime = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-binary-format = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+move-core-types = { git = "https://github.com/starcoinorg/diem", rev="8492fd52582a2068de112198027b007933e599d8" }
+starcoin-crypto={path = "../../commons/crypto"}
 log = "0.4.14"
 walkdir = "2.3.1"
 smallvec = "1.6.1"
+tiny-keccak={version="2", features = ["keccak"]}
