--- a/vm/dev/Cargo.toml
+++ b/vm/dev/Cargo.toml
@@ -16,4 +16,7 @@ starcoin-logger = {path = "../../commons/logger"}
 starcoin-state-api = { path = "../../state/api"}
 starcoin-statedb = { path = "../../state/statedb"}
 starcoin-resource-viewer = {path = "../resource-viewer"}
+starcoin-abi-resolver = {path = "../../abi/resolver"}
+starcoin-abi-decoder = {path = "../../abi/decoder"}
+starcoin-abi-types = {path = "../../abi/types"}
 bcs-ext = {path  = "../../commons/bcs_ext" }
